--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -13,13 +13,16 @@
       padding: 20px;
       color: #333;
     }
+
     header img {
       max-width: 200px;
       margin-bottom: 20px;
     }
+
     h1 {
       margin-bottom: 20px;
     }
+
     iframe {
       margin: 20px auto;
       display: block;
@@ -27,6 +30,7 @@
       max-width: 600px;
       width: 100%;
     }
+
     .back-button {
       display: inline-block;
       margin-top: 40px;
@@ -38,6 +42,7 @@
       text-decoration: none;
       transition: background 0.3s;
     }
+
     .back-button:hover {
       background: #005f99;
     }
@@ -45,18 +50,16 @@
 </head>
 <body>
   <header>
-    <img src="KingCast.png" alt="Logo KingCast" />
+    <img src="../KingCast.png" alt="Logo KingCast" />
     <h1>Episódios sobre Jesus</h1>
   </header>
 
-  <!-- Episódios -->
-  <iframe src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE" height="232" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov" height="232" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl" height="232" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Botão voltar -->
-  <a href="index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
