--- a/Deus/Index.html
+++ b/Deus/Index.html
@@ -13,13 +13,16 @@
       padding: 20px;
       color: #333;
     }
+
     header img {
       max-width: 200px;
       margin-bottom: 20px;
     }
+
     h1 {
       margin-bottom: 20px;
     }
+
     iframe {
       margin: 15px auto;
       display: block;
@@ -27,6 +30,7 @@
       max-width: 600px;
       width: 100%;
     }
+
     .back-button {
       display: inline-block;
       margin-top: 40px;
@@ -38,6 +42,7 @@
       text-decoration: none;
       transition: background 0.3s;
     }
+
     .back-button:hover {
       background: #005f99;
     }
@@ -45,24 +50,22 @@
 </head>
 <body>
   <header>
-    <img src="KingCast.png" alt="Logo KingCast" />
+    <img src="../KingCast.png" alt="Logo KingCast" />
     <h1>Episódios sobre Deus</h1>
   </header>
 
-  <!-- Episódios -->
-  <iframe src="https://open.spotify.com/embed/episode/0CvU1KqBpn8nNMV0IrNNg6" height="152" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0CvU1KqBpn8nNMV0IrNNg6" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/2VPTtr2iJEq2ueG2xIZQqy" height="152" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/2VPTtr2iJEq2ueG2xIZQqy" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/1l3TloiW0KQH8RdymXSrYN" height="152" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/1l3TloiW0KQH8RdymXSrYN" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/64NWkPxmUCmT155JLwgpoN" height="152" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/64NWkPxmUCmT155JLwgpoN" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/0oyrugXfdp7Qo7tnDfjCRa" height="152" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0oyrugXfdp7Qo7tnDfjCRa" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/7nkBSntS4R58YJaDf66jRA" height="152" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/7nkBSntS4R58YJaDf66jRA" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Botão voltar -->
-  <a href="index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
