--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -53,13 +53,12 @@
     <img src="../KingCast.png" alt="Logo KingCast" />
     <h1>Episódios sobre Jesus</h1>
   </header>
-
+  <iframe src="https://open.spotify.com/embed/episode/4261KcsZEzmmALWo5wBZz5?si=82c0fd7b32ab4a8b" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
   <iframe src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
   <iframe src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
   <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
+
