--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -20,7 +20,7 @@
     }
 
     h1 {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     iframe {
@@ -34,17 +34,19 @@
     .back-button {
       display: inline-block;
       margin-top: 40px;
-      padding: 10px 20px;
+      padding: 12px 24px;
       font-size: 1rem;
+      font-weight: bold;
       color: #fff;
       background: #007acc;
-      border-radius: 6px;
+      border-radius: 8px;
       text-decoration: none;
-      transition: background 0.3s;
+      transition: background 0.3s, transform 0.2s;
     }
 
     .back-button:hover {
       background: #005f99;
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -53,15 +55,32 @@
     <img src="../KingCast.png" alt="Logo KingCast" />
     <h1>Episódios sobre Jesus</h1>
   </header>
-  <iframe src="https://open.spotify.com/embed/episode/4261KcsZEzmmALWo5wBZz5?si=82c0fd7b32ab4a8b" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  <iframe src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  <iframe src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  <iframe src="https://open.spotify.com/embed/episode/2bMrNHCBr1mWGzQVTalGWj?si=33d177324ba94288" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/4261KcsZEzmmALWo5wBZz5?utm_source=generator" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 1"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE?utm_source=generator" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 2"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov?utm_source=generator" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 3"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 4"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/2bMrNHCBr1mWGzQVTalGWj?utm_source=generator" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 5"></iframe>
 
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
-
-
-
