--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <nav>
     <a href="jesus/index.html">Episódios sobre Jesus</a>
     <a href="deus/index.html">Episódios sobre Deus</a>
-     <a href="deus/index.html">Episódios sobre Espírito Santo</a>
+    <a href="espirito-santo/index.html">Episódios sobre Espírito Santo</a>
   </nav>
 
   <div class="form-container">
@@ -160,7 +160,3 @@
   </script>
 </body>
 </html>
-
-
-
-
