--- a/Espírito Santo /Index.html
+++ b/Espírito Santo /Index.html
@@ -1,1 +1,68 @@
-.
+m<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jesus - KingCast</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+    }
+
+    iframe {
+      margin: 20px auto;
+      display: block;
+      border-radius: 12px;
+      max-width: 600px;
+      width: 100%;
+    }
+
+    .back-button {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 12px 24px;
+      font-size: 1rem;
+      font-weight: bold;
+      color: #fff;
+      background: #007acc;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    .back-button:hover {
+      background: #005f99;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="../KingCast.png" alt="Logo KingCast" />
+    <h1>Episódios sobre O Espírito Santo</h1>
+  </header>
+
+  <iframe src="https://open.spotify.com/episode/5QIhhCmfBFQp8pl5HEpPq6?si=eb5fda0d68fc4679" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 1"></iframe>
+
+        
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+</body>
+</html>
+
