--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <nav>
     <a href="jesus/index.html">Episódios sobre Jesus</a>
     <a href="deus/index.html">Episódios sobre Deus</a>
-    <a href="espirito-santo/index.html">Episódios sobre Espírito Santo(Em breve)</a>
+    <a href="espirito-santo/index.html">Episódios sobre Espírito Santo</a>
   </nav>
 
   <div class="form-container">
@@ -160,5 +160,6 @@
   </script>
 </body>
 </html>
+
 
 
