--- a/Espírito Santo /Index.html
+++ b/Espírito Santo /Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jesus - KingCast</title>
+  <title>Espírito Santo - KingCast</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -53,16 +53,23 @@
 <body>
   <header>
     <img src="../KingCast.png" alt="Logo KingCast" />
-    <h1>Episódios sobre O Espírito Santo</h1>
+    <h1>Episódios sobre o Espírito Santo</h1>
   </header>
 
+  <!-- Episódio exemplo -->
   <iframe src="https://open.spotify.com/embed/episode/5QIhhCmfBFQp8pl5HEpPq6?si=07ec503cc5894a07" 
           height="152" frameborder="0" 
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
           loading="lazy" title="Episódio 1"></iframe>
 
-        
+  <!-- Para adicionar mais episódios, basta copiar e colar o bloco abaixo e trocar o link -->
+  <!--
+  <iframe src="LINK_DO_SPOTIFY_AQUI"
+          height="152" frameborder="0"
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy" title="Episódio X"></iframe>
+  -->
+
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
-
