--- a/Espirito_Santo/Index.html
+++ b/Espirito_Santo/Index.html
@@ -62,12 +62,10 @@
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
           loading="lazy" title="Episódio 1"></iframe>
 
-  <!-- Para adicionar mais episódios, basta copiar e colar o bloco abaixo e trocar o link -->
-  <!--
-  <iframe src="LINK_DO_SPOTIFY_AQUI"
-          height="152" frameborder="0"
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy" title="Episódio X"></iframe>
+ <iframe src="https://open.spotify.com/embed/episode/0WixiejIyMTFOUoPQ1uIi7?si=fdecd1697e634d45" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 2"></iframe>
   -->
 
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
