--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
   </header>
 
   <nav>
-    <a href="jesus/index.html">Episódios sobre Jesus</a>
-    <a href="deus/index.html">Episódios sobre Deus</a>
-    <a href="Espirito_santo/index.html">Episódios sobre Espírito Santo</a>
+    <a href="jesus/index.html">Jesus</a>
+    <a href="deus/index.html">Deus</a>
+    <a href="Espirito_santo/index.html">Espírito Santo</a>
   </nav>
 
   <div class="form-container">
@@ -160,6 +160,7 @@
   </script>
 </body>
 </html>
+
 
 
 
