--- a/Espirito_Santo/Index.html
+++ b/Espirito_Santo/Index.html
@@ -66,6 +66,11 @@
           height="152" frameborder="0" 
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
           loading="lazy" title="Episódio 2"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/5cZc9MsologwemMc1ChqO7?si=DfXfRTbrQnqf29kyxdcRZw" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 3"></iframe>
   -->
 
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
