--- a/Espirito_Santo/Index.html
+++ b/Espirito_Santo/Index.html
@@ -71,6 +71,11 @@
           height="152" frameborder="0" 
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
           loading="lazy" title="Episódio 3"></iframe>
+
+    <iframe src="https://open.spotify.com/episode/1RGVQOaTnP85gsLQGciEwk?si=oNdWc_axRya3u0CLu4xIjg" 
+          height="152" frameborder="0" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy" title="Episódio 4"></iframe>
   -->
 
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
