--- a/Anjos/Index.html
+++ b/Anjos/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deus - KingCast</title>
+  <title>Anjos - KingCast</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
 <body>
   <header>
     <img src="../KingCast.png" alt="Logo KingCast" />
-    <h1>Episódios sobre Deus</h1>
+    <h1>Episódios sobre anjos</h1>
   </header>
 
   <iframe src="https://open.spotify.com/embed/episode/3NSbDjsPGXZe6mCaFbmKa4?si=ToMcCrbvQNGqU-PSl0BkGg"></iframe>
