--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <a href="deus/index.html">Deus</a>
     <a href="Espirito_santo/index.html">Espírito Santo</a>
     <a href="Anjos/index.html">Anjos</a>
+    <a href="Satanás e os Demônios/index.html">Satanás e os Demônios</a>
   </nav>
 
   <div class="form-container">
@@ -161,6 +162,7 @@
   </script>
 </body>
 </html>
+
 
 
 
