--- a/Criação/Index.html
+++ b/Criação/Index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Criação - KingCast</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
 
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
+    iframe {
+      margin: 15px auto;
+      display: block;
+      border-radius: 12px;
+      max-width: 600px;
+      width: 100%;
+    }
+
+    .back-button {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .back-button:hover {
+      background: #005f99;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="../KingCast.png" alt="Logo KingCast" />
+    <h1>Episódios sobre a Criação</h1>
+  </header>
+
+  <iframe src="https://open.spotify.com/embed/episode/0GIgEw69buWXDMSp24oNru?si=DyYcQ6keTHK1tiO5scLbxg"></iframe>
+
+ 
+
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+</body>
+</html>
