--- a/Criação/Index.html
+++ b/Criação/Index.html
@@ -54,7 +54,7 @@
     <h1>Episódios sobre a Criação</h1>
   </header>
 
-  <iframe src="https://open.spotify.com/embed/episode/0GIgEw69buWXDMSp24oNru?si=DyYcQ6keTHK1tiO5scLbxg"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0GIgEw69buWXDMSp24oNru?si=DyYcQ6keTHK1tiO5scLbxg" width="300"></iframe>
   <iframe src="https://open.spotify.com/embed/episode/1iTyVtastm4ZU6MYKDVrge?si=a3c0637a3b364719"></iframe>
   <iframe src="https://open.spotify.com/embed/episode/1zJdFqgcfmr3xFml9rbAij?si=a3a89bbabf404a7b"></iframe>
 
