--- a/Criação/Index.html
+++ b/Criação/Index.html
@@ -29,6 +29,8 @@
       border-radius: 12px;
       max-width: 600px;
       width: 100%;
+      height: 152px; /* altura padrão do player do Spotify */
+      border: 0;
     }
 
     .back-button {
@@ -54,11 +56,24 @@
     <h1>Episódios sobre a Criação</h1>
   </header>
 
-  <iframe src="https://open.spotify.com/embed/episode/0GIgEw69buWXDMSp24oNru?si=DyYcQ6keTHK1tiO5scLbxg" width="300"></iframe>
-  <iframe src="https://open.spotify.com/embed/episode/1iTyVtastm4ZU6MYKDVrge?si=a3c0637a3b364719"></iframe>
-  <iframe src="https://open.spotify.com/embed/episode/1zJdFqgcfmr3xFml9rbAij?si=a3a89bbabf404a7b"></iframe>
+  <iframe 
+    src="https://open.spotify.com/embed/episode/0GIgEw69buWXDMSp24oNru?si=DyYcQ6keTHK1tiO5scLbxg" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+    loading="lazy">
+  </iframe>
 
-  
+  <iframe 
+    src="https://open.spotify.com/embed/episode/1iTyVtastm4ZU6MYKDVrge?si=a3c0637a3b364719" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+    loading="lazy">
+  </iframe>
+
+  <iframe 
+    src="https://open.spotify.com/embed/episode/1zJdFqgcfmr3xFml9rbAij?si=a3a89bbabf404a7b" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+    loading="lazy">
+  </iframe>
+
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
