--- a/Anjos/Index.html
+++ b/Anjos/Index.html
@@ -23,12 +23,14 @@
       margin-bottom: 20px;
     }
 
-    iframe {
+   iframe {
       margin: 15px auto;
       display: block;
       border-radius: 12px;
       max-width: 600px;
       width: 100%;
+      height: 80px; /* altura padrão do player do Spotify */
+      border: 0;
     }
 
     .back-button {
