--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -23,12 +23,14 @@ m<!DOCTYPE html>
       margin-bottom: 30px;
     }
 
-    iframe {
-      margin: 20px auto;
+  iframe {
+      margin: 15px auto;
       display: block;
       border-radius: 12px;
       max-width: 600px;
       width: 100%;
+      height: 80px; /* altura padrão do player do Spotify */
+      border: 0;
     }
 
     .back-button {
@@ -84,6 +86,7 @@ m<!DOCTYPE html>
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
+
 
 
 
