--- a/Deus/Index.html
+++ b/Deus/Index.html
@@ -23,12 +23,14 @@
       margin-bottom: 20px;
     }
 
-    iframe {
+   iframe {
       margin: 15px auto;
       display: block;
       border-radius: 12px;
       max-width: 600px;
       width: 100%;
+      height: 80px; /* altura padrão do player do Spotify */
+      border: 0;
     }
 
     .back-button {
@@ -69,3 +71,4 @@
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
+
