--- a/Criação/Index.html
+++ b/Criação/Index.html
@@ -74,6 +74,12 @@
     loading="lazy">
   </iframe>
 
+   <iframe 
+    src="https://open.spotify.com/embed/episode/6e7DMpB7Xh0V1SfMAdZllA?si=7Q3uS1h-R3SxmmZLhUrfXQ" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+    loading="lazy">
+  </iframe>
+  
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
