--- a/Criação/Index.html
+++ b/Criação/Index.html
@@ -79,6 +79,12 @@
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
     loading="lazy">
   </iframe>
+
+   <iframe 
+    src="https://open.spotify.com/embed/episode/4WSGvlH6CAbPfBdB4oOtIE?si=_77cwZd4QAWUQ-le6C0hAQ" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+    loading="lazy">
+  </iframe>
   
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
