--- a/Criação/Index.html
+++ b/Criação/Index.html
@@ -86,6 +86,12 @@
     loading="lazy">
   </iframe>
   
+    <iframe 
+    src="https://open.spotify.com/embed/episode/3aiXGdYmC6l7qnnDzEkbn0?si=zB4k7PGbSCyH1554m2jM1Q" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+    loading="lazy">
+  </iframe>
+  
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
